# teachpilot

./: .gitignore  LICENSE  README.md
backend/: .env.example  config.py  main.py  pyproject.toml  requirements.txt  test_generator.py  test_modify.py  test_multimodal.py  test_rag.py
backend/modules/: database.py  generator_service.py  modification_service.py  multimodal_service.py  rag_service.py  tts_service.py  version_manager.py
backend/routes/: chat.py  files.py  generate.py  modify.py  rag.py  settings.py  tts.py
backend/test_files/: test.txt
backend/version_history/test_project/: versions.json
docs/: 启动指南.md  技术栈.md
frontend/: README.md  index.html  magicui.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: index.ts
frontend/src/components/chat/: ChatInput.tsx  MessageItem.tsx  MessageList.tsx
frontend/src/components/courseware/: CoursewarePreview.tsx  (+1 more)
frontend/src/hooks/: useSpeechRecognition.ts  useTTS.ts  useTheme.ts
frontend/src/lib/: streaming.ts  utils.ts
frontend/src/pages/: ChatPage.tsx  CoursewarePage.tsx  Files.tsx  FilesPage.tsx  Generate.tsx  Home.tsx  Knowledge.tsx  KnowledgePage.tsx  Settings.tsx  SettingsPage.tsx  Versions.tsx
frontend/src/services/: api.ts  chat.ts  files.ts  generate.ts  index.ts  modify.ts  rag.ts  session.ts  settings.ts  tts.ts
frontend/src/stores/: chatStore.ts  coursewareStore.ts  fileStore.ts  index.ts  sessionStore.ts  settingsStore.ts  uiStore.ts
fwwb/: A04题目原文.md  答疑整理.md
test/: test_knowledge.txt
(+18 files in other folders)
