[project]
name = "teachpilot-backend"
version = "0.1.0"
description = "多模态 AI 互动式教学智能体后端服务"
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    # Web Framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    
    # HTTP Client
    "httpx>=0.26.0",
    
    # LLM & RAG
    "langchain>=0.1.0",
    "langchain-community>=0.0.10",
    "chromadb>=0.4.22",
    "sentence-transformers>=2.3.1",
    
    # Multi-modal Processing
    "PyMuPDF>=1.23.8",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.23",
    "opencv-python>=4.9.0.80",
    "pillow>=10.2.0",
    
    # LLM API
    "openai>=1.12.0",
    
    # Utilities
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
    "aiofiles>=23.2.1",
    
    # Development
    "pytest>=7.4.4",
    "pytest-asyncio>=0.23.3",
]

[project.optional-dependencies]
dev = [
    "black>=23.12.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
